--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonAftDock/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonAftDock/part.cfg
@@ -2,7 +2,7 @@ PART
 {
 name = LazTekDragonAftDock
 module = Part
-author = Lazarus Luan
+author = Lazarus Luan and zer0kerbal
 
 mesh = model.mu
 scale = 1.0
