--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonHabitat/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonHabitat/part.cfg
@@ -1,7 +1,18 @@
-PART{
-name = LazTekDragonHabitat
+// .cfg v0.9.99.0
+// Exploration Expansion (LEE)
+// created: 24 Jan 2015
+// updated: 09 Mar 2023
+
+// this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
+	MODEL { model = LazTek/ExplorationExpansion/Assets/ }
+
+PART
+{
+name = lee-
+oldName = LazTekDragonHabitat
+
 module = Part
-author = Lazarus Luan
+author = Lazarus Luan and zer0kerbal
 
 mesh = model.mu
 scale = 1
