--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonAftDock/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonAftDock/part.cfg
@@ -1,6 +1,13 @@
+// lee-dock-aft.cfg v0.9.99.0
+// Exploration Expansion (LEE)
+// created: 24 Jan 2015
+// updated: 11 Mar 2023
+
+// this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
 PART
 {
-name = LazTekDragonAftDock
+name = lee-dock-aft
+oldName = LazTekDragonAftDock
 module = Part
 author = Lazarus Luan and zer0kerbal
 
