--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonRetractablePanelCover/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonRetractablePanelCover/part.cfg
@@ -16,7 +16,7 @@ author = Lazarus Luan and zer0kerbal
 
 model = model.mu
 scale = 1
-rescaleFactor = .85
+rescaleFactor = 0.85
 
 node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1
 
