--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekExplorerHeatShieldV2/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekExplorerHeatShieldV2/part.cfg
@@ -16,7 +16,7 @@ author = Lazarus Luan and zer0kerbal
 
 mesh = model.mu
 scale = 1
-rescaleFactor = .85
+rescaleFactor = 0.85
 
 node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
 node_stack_bottom = 0.0, -0.08, 0.0, 0.0, -1.0, 0.0
