--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekMonoPropellantTank200/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekMonoPropellantTank200/part.cfg
@@ -16,7 +16,7 @@ author = Lazarus Luan and zer0kerbal
 
 mesh = model.mu
 scale = 1
-rescaleFactor = .85
+rescaleFactor = 0.85
 
 node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
