--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
@@ -14,7 +14,7 @@ PART
 
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-eng-vtol }
 	scale = 1
-	rescaleFactor = .85
+	rescaleFactor = 0.85
 
 	node_stack_top = 0.0, 1.85, 0.0, 0.0, 1.0, 0.0
 	node_attach = 0.0, 0.0, 0.7, 0.0, 0.0, -1.0
