--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonRetractablePanelCover/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekDragonRetractablePanelCover/part.cfg
@@ -1,51 +1,50 @@
-// .cfg v0.9.99.0
+// lee-solar-cover-retractable.cfg v0.9.99.0
 // Exploration Expansion (LEE)
 // created: 24 Jan 2015
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-	MODEL { model = LazTek/ExplorationExpansion/Assets/ }
 
 PART
 {
-name = lee-
-oldName = LazTekSolarPanelCoverRetractable
+	name = lee-solar-cover-retractable
+	oldName = LazTekSolarPanelCoverRetractable
 
-module = Part
-author = Lazarus Luan and zer0kerbal
+	module = Part
+	author = Lazarus Luan and zer0kerbal
 
-model = model.mu
-scale = 1
-rescaleFactor = 0.85
+	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-solar-cover-retractable }
+	scale = 1
+	rescaleFactor = 0.85
 
-node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1
+	node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1
 
-TechRequired = heavyAerodynamics
-entryCost = 8000
-Cost = 2100
-category = Aero
-subcategory = 0
-title = Dragon Retractable Solar Panel Fairing
-manufacturer = LazTek
-description = Retractable fairing for Dragon solar panels. Designed to be stacked on attachment points in pairs for use on interplanetary missions.
+	TechRequired = heavyAerodynamics
+	entryCost = 8000
+	Cost = 2100
+	category = Aero
+	subcategory = 0
+	title = Dragon Retractable Solar Panel Fairing
+	manufacturer = LazTek
+	description = Retractable fairing for Dragon solar panels. Designed to be stacked on attachment points in pairs for use on interplanetary missions.
 
-attachRules = 0,1,0,1,1
+	attachRules = 0,1,0,1,1
 
-mass = 0.05
-dragModelType = default
-maximum_drag = 0.1
-minimum_drag = 0.1
-angularDrag = 1
-crashTolerance = 10
-explosionPotential = 0.0
-maxTemp = 3400
-fuelCrossFeed = False
+	mass = 0.05
+	dragModelType = default
+	maximum_drag = 0.1
+	minimum_drag = 0.1
+	angularDrag = 1
+	crashTolerance = 10
+	explosionPotential = 0.0
+	maxTemp = 3400
+	fuelCrossFeed = False
 
-MODULE
-{
-	name = ModuleAnimateGeneric
-	animationName = PanelOpen
-	startEventGUIName = Open Solar Panel Covers
-	endEventGUIName = Close Solar Panel Covers
-}
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = PanelOpen
+		startEventGUIName = Open Solar Panel Covers
+		endEventGUIName = Close Solar Panel Covers
+	}
 }
