--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekExplorerHeatShieldV2/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekExplorerHeatShieldV2/part.cfg
@@ -1,78 +1,77 @@
-// .cfg v0.9.99.0
+// lee-heatshield-explorer-2.cfg v0.9.99.0
 // Exploration Expansion (LEE)
 // created: 24 Jan 2015
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-	MODEL { model = LazTek/ExplorationExpansion/Assets/ }
 
 PART
 {
-name = lee-
-oldName = LazTekExplorerHeatShieldV2
+	name = lee-heatshield-explorer-2
+	oldName = LazTekExplorerHeatShieldV2
 
-module = Part
-author = Lazarus Luan and zer0kerbal
+	module = Part
+	author = Lazarus Luan and zer0kerbal
 
-mesh = model.mu
-scale = 1
-rescaleFactor = 0.85
+	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-heatshield-explorer-2 }
+	scale = 1
+	rescaleFactor = 0.85
 
-node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
-node_stack_bottom = 0.0, -0.08, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
+	node_stack_bottom = 0.0, -0.08, 0.0, 0.0, -1.0, 0.0
 
-TechRequired = heavyAerodynamics
-entryCost = 4000
-cost = 400
-category = Aero
-subcategory = 0
-title = Explorer Heat Shield V2
-manufacturer = LazTek
-description = 2.5m PICA-X protective heat shield with bottom decoupler for atmospheric entry of SpaceX Explorer V2 Habitat module.
+	TechRequired = heavyAerodynamics
+	entryCost = 4000
+	cost = 400
+	category = Aero
+	subcategory = 0
+	title = Explorer Heat Shield V2
+	manufacturer = LazTek
+	description = 2.5m PICA-X protective heat shield with bottom decoupler for atmospheric entry of SpaceX Explorer V2 Habitat module.
 
-attachRules = 1,0,1,1,0
+	attachRules = 1,0,1,1,0
 
-mass = 0.15
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 2
-crashTolerance = 12
-maxTemp = 12000
-fuelCrossFeed = False
-stagingIcon = DECOUPLER_HOR
+	mass = 0.15
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	crashTolerance = 12
+	maxTemp = 12000
+	fuelCrossFeed = False
+	stagingIcon = DECOUPLER_HOR
 
-stageOffset = 1
-childStageOffset = 1
+	stageOffset = 1
+	childStageOffset = 1
 
-MODULE
-{
-    name = ModuleDecouple
-    ejectionForce = 100
-	explosiveNodeID = top
-}
-MODULE
-{
-	name = ModuleHeatShield
-	direction = 0, -1, 0
-	reflective = 0.05	
-	ablative = AblativeShielding
+	MODULE
 	{
-		key = 650 0 0 0
-		key = 1000 64 0 0
-		key = 3000 80 0 0
+		name = ModuleDecouple
+		ejectionForce = 100
+		explosiveNodeID = top
 	}
-	dissipation
+	MODULE
 	{
-			key = 300 0 0 0
-			key = 500 180 0 0
+		name = ModuleHeatShield
+		direction = 0, -1, 0
+		reflective = 0.05	
+		ablative = AblativeShielding
+		{
+			key = 650 0 0 0
+			key = 1000 64 0 0
+			key = 3000 80 0 0
+		}
+		dissipation
+		{
+				key = 300 0 0 0
+				key = 500 180 0 0
+		}
 	}
-}
 
-RESOURCE
-{
-	name = AblativeShielding
-	amount = 1250
-	maxAmount = 1250
-}
+	RESOURCE
+	{
+		name = AblativeShielding
+		amount = 1250
+		maxAmount = 1250
+	}
 }
