--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekFalconSolarPanels/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekFalconSolarPanels/part.cfg
@@ -1,3 +1,10 @@
+// .cfg v0.9.99.0
+// Exploration Expansion (LEE)
+// created: 24 Jan 2015
+// updated: 11 Mar 2023
+
+// this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
+	MODEL { model = LazTek/ExplorationExpansion/Assets/ }
 PART
 {
 name = LazTekFalconSolarPanels
