--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekFalconSolarPanels/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekFalconSolarPanels/part.cfg
@@ -1,60 +1,60 @@
-// .cfg v0.9.99.0
+// lee-solar-panel.cfg v0.9.99.0
 // Exploration Expansion (LEE)
 // created: 24 Jan 2015
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-	MODEL { model = LazTek/ExplorationExpansion/Assets/ }
 PART
-{
-name = LazTekFalconSolarPanels
-module = Part
-author = Lazarus Luan and zer0kerbal
+	{
+	name = lee-solar-panel
+	oldName = LazTekFalconSolarPanels
+	module = Part
+	author = Lazarus Luan and zer0kerbal
 
-mesh = model.mu
-scale = 1.0
-rescaleFactor = 0.85
+	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-solar-panel }
+	scale = 1.0
+	rescaleFactor = 0.85
 
-node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
 
-TechRequired = specializedElectrics
-entryCost = 19000
-cost = 1200
-category = Utility
-subcategory = 0
-title = Falcon Solar Array
-manufacturer = LazTek
-description = Recessed, covered solar panel array designed to attach to 2.5-meter Falcon rocket section to provide power for orbital and exploratory purposes.
+	TechRequired = specializedElectrics
+	entryCost = 19000
+	cost = 1200
+	category = Utility
+	subcategory = 0
+	title = Falcon Solar Array
+	manufacturer = LazTek
+	description = Recessed, covered solar panel array designed to attach to 2.5-meter Falcon rocket section to provide power for orbital and exploratory purposes.
 
-attachRules = 0,1,0,1,1
+	attachRules = 0,1,0,1,1
 
 
-mass = 0.3
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.2
-angularDrag = 1
-crashTolerance = 8
-maxTemp = 3200
+	mass = 0.3
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 1
+	crashTolerance = 8
+	maxTemp = 3200
 
-MODULE
-{
-	name = ModuleDeployableSolarPanel
-	
-	animationName = Take 001
+	MODULE
+	{
+		name = ModuleDeployableSolarPanel
+		
+		animationName = Take 001
 
-	raycastTransformName = suncatcher
+		raycastTransformName = suncatcher
 
-	resourceName = ElectricCharge
+		resourceName = ElectricCharge
 
-	chargeRate = 24
+		chargeRate = 24
 
-	powerCurve
- 	{
-		key = 206000000000 0 0 0
-		key = 13599840256 1 0 0
-		key = 68773560320 0.5 0 0
-		key = 0 10 0 0
- 	}
-}
+		powerCurve
+		{
+			key = 206000000000 0 0 0
+			key = 13599840256 1 0 0
+			key = 68773560320 0.5 0 0
+			key = 0 10 0 0
+		}
+	}
 }
