--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekMonoPropellantTank200/lee-tank-dragon-mono.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekMonoPropellantTank200/lee-tank-dragon-mono.cfg
@@ -1,4 +1,4 @@
-// lee-tank-dragon-mono.cfg v0.9.99.0
+// lee-tank-dragon-mono-200.cfg v0.9.99.0
 // Exploration Expansion (LEE)
 // created: 24 Jan 2015
 // updated: 11 Mar 2023
@@ -7,13 +7,13 @@
 
 PART
 {
-	name = lee-tank-dragon-mono
+	name = lee-tank-dragon-mono-200
 	oldName = LazTekDragonMonopropellantTank
 
 	module = Part
 	author = Lazarus Luan and zer0kerbal
 
-	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-tank-dragon-mono }
+	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-tank-dragon-mono-200 }
 	scale = 1.0
 	rescaleFactor = 0.85
 
