--- a/GameData/LazTek/ExplorationExpansion/Parts/LazTekMonoPropellantTank400/part.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/LazTekMonoPropellantTank400/part.cfg
@@ -1,49 +1,48 @@
-// .cfg v0.9.99.0
+// lee-tank-dragon-mono-400.cfg v0.9.99.0
 // Exploration Expansion (LEE)
 // created: 24 Jan 2015
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-	MODEL { model = LazTek/ExplorationExpansion/Assets/ }
 
 PART
 {
-name = lee-
-oldName = LazTekDragonMonoTank400
+	name = lee-tank-dragon-mono-400
+	oldName = LazTekDragonMonoTank400
 
-module = Part
-author = Lazarus Luan and zer0kerbal
+	module = Part
+	author = Lazarus Luan and zer0kerbal
 
-mesh = model.mu
-scale = 1.0
-rescaleFactor = 0.85
+	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-tank-dragon-mono-400 }
+	scale = 1.0
+	rescaleFactor = 0.85
 
-node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
-TechRequired = veryHeavyRocketry
-entryCost = 4000
-cost = 120
-category = 0
-subcategory = 0
-title = 400 Monopropellant Tank
-manufacturer = LazTek
-description = Attachable monopropellant tank for extended use of Dragon spacecraft.
+	TechRequired = veryHeavyRocketry
+	entryCost = 4000
+	cost = 120
+	category = 0
+	subcategory = 0
+	title = 400 Monopropellant Tank
+	manufacturer = LazTek
+	description = Attachable monopropellant tank for extended use of Dragon spacecraft.
 
-attachRules = 0,1,0,1,0
+	attachRules = 0,1,0,1,0
 
-mass = .05
-dragModelType = default
-maximum_drag = 0.2
-minimum_drag = 0.3
-angularDrag = 2
-crashTolerance = 12
-maxTemp = 2900
-fuelCrossFeed = true
+	mass = .05
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.3
+	angularDrag = 2
+	crashTolerance = 12
+	maxTemp = 2900
+	fuelCrossFeed = true
 
-RESOURCE
-{
- name = MonoPropellant
- amount = 400
- maxAmount = 400
-}
+	RESOURCE
+	{
+	name = MonoPropellant
+	amount = 400
+	maxAmount = 400
+	}
 }
