--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
@@ -11,32 +11,33 @@ PART
 	module = Part
 	author = Lazarus Luan and zer0kerbal
 
-
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-dock-aft }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = size2, srf
 
+	attachRules = 0,1,0,0,0
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-
-
 
 	TechRequired = metaMaterials
 	entryCost = 6000
 	cost = 280
-	category = Utility
+	category = Coupling
 	subcategory = 0
-	title = SpaceX Dragon Aft Docking Port
 
+	title = SpaceX Dragon Aft Docking Port
+	manufacturer = #LTD-Agency-titl
 	description = Aft docking port for SpaceX Dragon V2 spacecraft, also connects to medium-sized docking ports. Built-in top decouplers to allow discarding before atmospheric reentry.
 
-	attachRules = 0,1,0,0,0
-
 	mass = 0.075
+
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
 	angularDrag = 0.5
+
 	crashTolerance = 10
+
 	maxTemp = 3400
 
 	MODULE
