--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
@@ -27,7 +27,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Dragon Habitat
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = 2.5-meter habitat trunk with decoupler for Dragon 2 spacecraft on interplanetary missions. Designed to have twin solar panels with retractable covers attached and upper landing gear. Has batteries and extra monopropellent fuel.
 
 	attachRules = 1,0,1,1,1
