--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
@@ -34,7 +34,7 @@ PART
 	category = Propulsion
 	subcategory = 0
 	title = NASA NERVA II Nuclear Vacuum Engine
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = NASA NERVA II Nuclear vacuum engine, mount and protective cowling designed to be attached to 2.5m upper tank of long-range space vehicles.
 
 	attachRules = 1,0,1,1,1
