--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
@@ -25,7 +25,7 @@ PART
 	category = Propulsion
 	subcategory = 0
 	title = Advanced PulseJet VTOL Engine
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = Monopropellant-burning, advanced hybrid pulseJet engine contained in a 1.25m cowling, switchable between air-breathing and closed system modes for single stage to orbit spacecraft. Has vector thrust that can be switched between vertical and forward modes. 
 
 	attachRules = 1,1,0,1,1
