--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-tanker.cfg
@@ -27,7 +27,7 @@ PART
 	category = 0
 	subcategory = 0
 	title = SpaceX Falcon Tanker
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = 2.5m upper stage liquid fuel and monopropellant tank for SpaceX Falcon Heavy Tanker launch configuration.
 
 	attachRules = 1,1,1,1,0
