--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-stage-short.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-stage-short.cfg
@@ -26,7 +26,7 @@ PART
 	category = Structural
 	subcategory = 0
 	title = Falcon Short Interstage
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = Simple 2.5m utility decoupler fairing for SpaceX Falcon.
 
 	attachRules = 1,0,1,1,1
