--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
@@ -25,7 +25,7 @@ PART
 	category = Aero
 	subcategory = 0
 	title = Explorer Heat Shield V2
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = 2.5m PICA-X protective heat shield with bottom decoupler for atmospheric entry of SpaceX Explorer V2 Habitat module.
 
 	attachRules = 1,0,1,1,0
