--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
@@ -25,7 +25,7 @@ PART
 	category = Aero
 	subcategory = 0
 	title = Dragon Retractable Solar Panel Fairing
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = Retractable fairing for Dragon solar panels. Designed to be stacked on attachment points in pairs for use on interplanetary missions.
 
 	attachRules = 0,1,0,1,1
