--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
@@ -25,7 +25,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Dragon Habitat Landing Leg
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = Landing leg for Dragon Habitat, designed to be attached in a set of four.
 
 	attachRules = 0,1,0,0,1
