--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
@@ -23,7 +23,7 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Falcon Solar Array
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = Recessed, covered solar panel array designed to attach to 2.5-meter Falcon rocket section to provide power for orbital and exploratory purposes.
 
 	attachRules = 0,1,0,1,1
