--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-200.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-200.cfg
@@ -24,7 +24,7 @@ PART
 	category = 0
 	subcategory = 0
 	title = 200 Monopropellant Tank
-	manufacturer = LazTek
+	manufacturer = #LTD-Agency-titl
 	description = Attachable monopropellant tank for extended use of Dragon spacecraft.
 
 	attachRules = 0,1,0,1,0
