--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
@@ -19,6 +19,9 @@ PART
 	attachRules = 0,1,0,0,0
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 
+	sound_decoupler_fire = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+
 	TechRequired = metaMaterials
 	entryCost = 6000
 	cost = 280
@@ -28,6 +31,7 @@ PART
 	title = SpaceX Dragon Aft Docking Port
 	manufacturer = #LTD-Agency-titl
 	description = Aft docking port for SpaceX Dragon V2 spacecraft, also connects to medium-sized docking ports. Built-in top decouplers to allow discarding before atmospheric reentry.
+	tags = #autoLOC_500848 // berth capture connect couple dock fasten join moor socket
 
 	mass = 0.075
 
@@ -38,21 +42,90 @@ PART
 
 	crashTolerance = 10
 
-	maxTemp = 3400
+	maxTemp = 2000
+
+	childStageOffset = 0
+	stagingIcon = DECOUPLER_HOR
 
 	MODULE
 	{
 		name = ModuleDockingNode
-		referenceAttachNode = dockingNode
-		nodeType = size1
+		nodeType = size1, size2
+		crossfeed = True
+		referenceAttachNode = top
+		
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
+		
+		acquireForce = 2.0
+		acquireForceTweak = 100
+		acquireMinFwdDot = 0.7
+		acquireRange = 0.5
+		acquireTorque = 2.0
+		acquireTorqueRoll = 0.0
+		
+		snapOffset = 90
+		snapRotation = False
+		undockEjectionForce = 10
+		
+		captureMinFwdDot = 0.998
+		captureMaxRvel = 0.3
+		captureRange = 0.06
+		minDistanceToReEngage = 1
 	}
-
-	stagingIcon = DECOUPLER_HOR
 
 	MODULE
 	{
 		name = ModuleDecouple
 		ejectionForce = 100
+		ejectionForcePercent = 100
+		isOmniDecoupler = False
 		explosiveNodeID = srf
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
 	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = False
+		useRate = True
+		toggleInEditor = True
+		toggleInFlight = True
+		toggleInFlight = True
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_6001409 	//#autoLOC_6001409 = Lights On
+		eventOffName = #autoLOC_6001408 	//#autoLOC_6001408 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
+	}
+
 }
