--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
@@ -16,59 +16,222 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-dragon-habitat }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = size2
 
+	CrewCapacity = 0 // 7
+	vesselType = Base
+	INTERNAL { name = DragonHabitat }
+
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0, 1.12, 0, 0, -1, 0, 1
-	node_stack_attach = 0, -1.0, 0, 0, 1, 0, 1
 	node_stack_bottom = 0, -2.1, 0, 0, 1, 0, 1
+	node_stack_attach = 0, -1.0, 0, 0, 1, 0, 1
 
 	TechRequired = advScienceTech
 	entryCost = 36000
 	cost = 12000
 	category = Utility
 	subcategory = 0
+
+	sound_decoupler_fire = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+
 	title = Dragon Habitat
 	manufacturer = #LTD-Agency-titl
 	description = 2.5-meter habitat trunk with decoupler for Dragon 2 spacecraft on interplanetary missions. Designed to have twin solar panels with retractable covers attached and upper landing gear. Has batteries and extra monopropellent fuel.
+	tags = #autoLOC_500297 //#autoLOC_500297 = base cabin (can outpost passenger statio tour tuna
 
-	attachRules = 1,0,1,1,1
+	mass = 0.9 // inflatable
+	fuelCrossFeed = False
+	PhysicsSignificance = 0
 
-	fx_gasBurst_white = 0.0, 0.217, 0.0, 0.0, 1.0, 0.0, activate
-	sound_vent_large = activate
-
-	mass = .9
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.1
-	angularDrag = 1
-	crashTolerance = 12
-	maxTemp = 2400
-	fuelCrossFeed = False
+	minimum_drag = 0.3
+	angularDrag = 2
 
-	CrewCapacity = 7
+	crashTolerance = 6 // inflatable - more fragile
+	breakingForce = 200
+	breakingTorque = 200
 
-	vesselType = Ship
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	thermalMassModifier = 1.0
 
 	stageOffset = 1
 	childStageOffset = 1
-
-	stagingIcon = DECOUPLER_HOR
-
-	INTERNAL
-	{
-	name = DragonHabitat
-	}
+	stagingIcon = COMMAND_POD
 
 	MODULE
 	{
 		name = ModuleCommand
 		minimumCrew = 0
+		hasHibernation = True
+		hibernation = False
+		hibernateOnWarp = True
+		hibernationMultiplier = 0.00125
+		defauLCTontrolPointDisplayName = #autoLOC_6011003 // Default
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.005
+		}
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = #autoLOC_6011004 // Reversed
+			orientation = 0,0,180
+		}
+	}
+	
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = 0.1
+		packetCeiling = 5
 	}
 
 	MODULE
 	{
 		name = ModuleDecouple
 		ejectionForce = 100
-		explosiveNodeID = top 
+		ejectionForcePercent = 100
+		isOmniDecoupler = False
+		explosiveNodeID = top
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		CrewCapacity = 7
+		animationName = HabitatOpen
+		startEventGUIName = #LTD-MAG-hab-strt // Habitat: Inflate
+		endEventGUIName = #LTD-MAG-hab-stop // Habitat: Deflate
+		actionGUIName = #LTD-MAG-hab-actn // Toggle Habitat
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = HabitatLadder
+		startEventGUIName = #LTD-MAG-lad-strt // Ladder extend
+		endEventGUIName = #LTD-MAG-lad-stop // Ladder retract
+		actionGUIName = #LTD-MAG-lad-actn // Toggle Ladder
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = OuterLights
+		startEventGUIName = #LTD-MAG-lights-ext-strt // Exterior Lights On
+		endEventGUIName = #LTD-MAG-lights-ext-stop // Exterior Lights Off
+		actionGUIName = #LTD-MAG-lights-ext-actn // Toggle exterior lights
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+	}
+
+	MODULE
+	{
+		name = ModuleScienceContainer
+		
+		reviewActionName = #autoLOC_502201 // Review Stored Data
+		storeActionName = #autoLOC_502202 // Store Experiments
+		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
+		storageRange = 4.0
+		allowRepeatedSubjects = True
+		canBeTransferredToInVessel = True
+		canTransferInVessel = True
+		showStatus = True
+	}
+
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = crewReport
+		experimentActionName = #autoLOC_502009 // Crew Report
+		resetActionName = #autoLOC_502010 // Discard Crew Report
+		reviewActionName = #autoLOC_502200 // Review Report
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		rerunnable = True
+		xmitDataScalar = 1.0
+		usageReqMaskInternal = 5
+		usageReqMaskExternal = -1
+	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		shaderProperty = _EmissiveColor
+		animRate = 0.8
+		animState = false
+		useRate = true
+		toggleInEditor = true
+		toggleInFlight = true
+		toggleInFlight = true
+		unfocusedRange = 5
+		toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+		eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+		eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+		toggleAction = True
+		defaultActionGroup = Light
+		redCurve
+		{
+			key = 0 0 0 3
+			key = 1 1 0 0
+		}
+		greenCurve
+		{
+			key = 0 0 0 1
+			key = 1 1 1 0
+		}
+		blueCurve
+		{
+			key = 0 0 0 0
+			key = 1 0.7 1.5 0
+		}
+		alphaCurve
+		{
+			key = 0 1
+		}
 	}
 
 	RESOURCE
@@ -87,38 +250,9 @@ PART
 
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = HabitatOpen
-		startEventGUIName = Inflate Habitat
-		endEventGUIName = Deflate Habitat
+		name = ModuleInventoryPart
+		InventorySlots = 18
+		packedVolumeLimit = 1500
 	}
 
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = HabitatLadder
-		startEventGUIName = Extend Ladder
-		endEventGUIName = Retract Ladder
-	}
-
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = OuterLights
-		startEventGUIName = Outer Lights On
-		endEventGUIName = Outer Lights Off
-	}
-	MODULE
-	{
-		name = ModuleScienceContainer
-		
-		reviewActionName = Review Data
-		storeActionName = Store Experiments	
-		collectActionName = Take Data
-		
-		evaOnlyStorage = True
-		storageRange = 4
-		
-		allowRepeatedSubjects = True
-	}
 }
