--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
@@ -15,7 +15,9 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-eng-nerva-2 }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = size2, srf
 
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -4.0, 0, 0.0, -1.0, 0.0
 
@@ -31,57 +33,74 @@ PART
 	TechRequired = nuclearPropulsion
 	entryCost = 28000
 	cost = 9000
-	category = Propulsion
+	category = Engine
 	subcategory = 0
+
 	title = NASA NERVA II Nuclear Vacuum Engine
 	manufacturer = #LTD-Agency-titl
 	description = NASA NERVA II Nuclear vacuum engine, mount and protective cowling designed to be attached to 2.5m upper tank of long-range space vehicles.
+	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
-	attachRules = 1,0,1,1,1
+	mass = 3.75 // was 2.0 // LV-N is 3
 
-	mass = 2.0
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 22
-	maxTemp = 4000
 
+	crashTolerance = 22 // 12
+
+	maxTemp = 2500
+	heatConductivity = 0.06 // half default
+	skinInternalConductionMult = 4.0
+	emissiveConstant = 0.85 // engine nozzles are good at radiating, NTRs even better
+	radiatorMax = 0.35 //Default = 0.25 but nuke engines are meant to run hot
 
 	MODULE
 	{
 		name = ModuleEngines
 		thrustVectorTransformName = thrustTransform
-		ehxaustDamage = true
+		ehxaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
 		maxThrust = 340
 		heatProduction = 520
 		fxOffset = 0, 0, 3.00
+		EngineType = Nuclear
+		exhaustDamageDistanceOffset = 1.86
 		PROPELLANT
 		{
 			name = LiquidFuel
-				ratio = 0.9
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
-		{
-			name = Oxidizer
-			ratio = 1.1
-		}
+		// PROPELLANT
+		// {
+		// 	name = Oxidizer
+		// 	ratio = 1.1
+		// }
 		atmosphereCurve
 		{
 		key = 0 900
-		key = 1 380
+		key = 1 380 // 185
+		key = 2 0.001
 		}
 	}
-
 
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 1
+		gimbalResponseSpeed = 40
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100
+		gimbalLock = False
 	}
 
 	MODULE
@@ -96,14 +115,200 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 5.0
+			rate = 10.0
 		}
 	}
 
-	RESOURCE
+	MODULE
 	{
-		name = ElectricCharge
-		amount = 0
-		maxAmount = 0
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.7
+		maxDistance = 50
+		falloff = 2.5
+		thrustTransformName = thrustTransform
+	}
+
+	// RESOURCE
+	// {
+	// 	name = ElectricCharge
+	// 	amount = 0
+	// 	maxAmount = 0
+		// isTweakable = false
+		// hideFlow = true
+	// }
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		useStaging = True
+		useEvent = True
+		situationMask = 121
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ALWAYS
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = BODYANDSITUATION
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ONCEPERPART
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 4000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 8000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 2000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 4000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 1000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 2000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 300000
+			situationMask = 16
+			body = _NotSun
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDE
+			test = LT
+			value = 600000
+			situationMask = 32
+			body = _NotSun
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = GT
+			value = 0
+			situationMask = 8
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 600
+			situationMask = 8
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = GT
+			value = 300
+			situationMask = 8
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 1200
+			situationMask = 8
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = GT
+			value = 600
+			situationMask = 8
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 2500
+			situationMask = 8
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = LT
+			value = 200
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = GT
+			value = 100
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = LT
+			value = 100
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = GT
+			value = 50
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = LT
+			value = 50
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = GT
+			value = 20
+			prestige = Exceptional
+		}
 	}
 }
