--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-vtol.cfg
@@ -15,7 +15,9 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-eng-vtol }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = size1, srf
 
+	attachRules = 1,1,0,1,1
 	node_stack_top = 0.0, 1.85, 0.0, 0.0, 1.0, 0.0
 	node_attach = 0.0, 0.0, 0.7, 0.0, 0.0, -1.0
 
@@ -24,113 +26,116 @@ PART
 	cost = 9000
 	category = Propulsion
 	subcategory = 0
+
 	title = Advanced PulseJet VTOL Engine
 	manufacturer = #LTD-Agency-titl
 	description = Monopropellant-burning, advanced hybrid pulseJet engine contained in a 1.25m cowling, switchable between air-breathing and closed system modes for single stage to orbit spacecraft. Has vector thrust that can be switched between vertical and forward modes. 
+	tags = #autoLOC_500417 // aircraft jet plane propuls (whiplash
 
-	attachRules = 1,1,0,1,1
+	mass = 0.4
 
-	mass = .4
 	dragModelType = default
 	maximum_drag = 0.1
 	minimum_drag = 0.1
 	angularDrag = 2
+
 	crashTolerance = 12
-	maxTemp = 3400
+
+	maxTemp = 2500
 
 	stagingIcon = LIQUID_ENGINE
 
 	EFFECTS
 	{
-	running_closed
-	{
-		AUDIO
+		running_closed
 		{
-		channel = Ship
-		clip = sound_rocket_spurts
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.2
-		pitch = 1.0 1.0
-		loop = true
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_spurts
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/shockExhaust_blue
+				transformName = thrustExhaust
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+			}
 		}
-		MODEL_MULTI_PARTICLE
+		power_open
 		{
-		modelName = Squad/FX/shockExhaust_blue
-		transformName = thrustExhaust
-		emission = 0.0 0.0
-		emission = 0.05 0.0
-		emission = 0.075 0.25
-		emission = 1.0 1.25
-		speed = 0.0 0.5
-		speed = 1.0 1.2
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_spurts
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/shockExhaust_red_small
+				transformName = thrustExhaust
+				emission = 0.0 0.0
+				emission = 0.05 0.0
+				emission = 0.075 0.25
+				emission = 1.0 1.25
+				speed = 0.0 0.5
+				speed = 1.0 1.2
+			}
 		}
-	}
-	power_open
-	{
-		AUDIO
+		running_open
 		{
-		channel = Ship
-		clip = sound_rocket_spurts
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.2
-		pitch = 1.0 1.0
-		loop = true
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_jet_deep
+				volume = 0.0 0.0
+				volume = 1.0 1.0
+				pitch = 0.0 0.2
+				pitch = 1.0 1.0
+				loop = true
+			}
 		}
-		MODEL_MULTI_PARTICLE
+		engage
 		{
-		modelName = Squad/FX/shockExhaust_red_small
-		transformName = thrustExhaust
-		emission = 0.0 0.0
-		emission = 0.05 0.0
-		emission = 0.075 0.25
-		emission = 1.0 1.25
-		speed = 0.0 0.5
-		speed = 1.0 1.2
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
 		}
-	}
-	running_open
-	{
-		AUDIO
+		flameout
 		{
-		channel = Ship
-		clip = sound_jet_deep
-		volume = 0.0 0.0
-		volume = 1.0 1.0
-		pitch = 0.0 0.2
-		pitch = 1.0 1.0
-		loop = true
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
 		}
-	}
-	engage
-	{
-		AUDIO
-		{
-		channel = Ship
-		clip = sound_vent_soft
-		volume = 1.0
-		pitch = 2.0
-		loop = false
-		}
-	}
-	flameout
-	{
-		PREFAB_PARTICLE
-		{
-		prefabName = fx_exhaustSparks_flameout_2
-		transformName = thrustTransform
-		oneShot = true
-		}
-		AUDIO
-		{
-		channel = Ship
-		clip = sound_explosion_low
-		volume = 1.0
-		pitch = 2.0
-		loop = false
-		}
-	}
 	}
 
 	MODULE
@@ -139,6 +144,7 @@ PART
 		primaryEngineID = AirBreathing
 		secondaryEngineID = ClosedCycle
 	}
+
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -172,8 +178,8 @@ PART
 			key = 0.3 3600
 			key = 1 3600
 		}
-		
 	}
+		
 	MODULE
 	{
 		name = ModuleEnginesFX
@@ -188,24 +194,30 @@ PART
 		PROPELLANT
 		{
 			name = MonoPropellant
-				ratio = 0.9
+			ratio = 0.9
 			DrawGauge = True
 		}
 		atmosphereCurve
 		{
-		key = 0 460
-		key = 1 320
+			key = 0 460
+			key = 1 320
 		}
-		
 	}
-
 
 	MODULE
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
 		gimbalRange = 5.0
-
+		gimbalResponseSpeed = 50
+		useGimbalResponseSpeed = True
+		enablePitch = True
+		enableRoll = True
+		enableYaw = True
+		flipYZ = False
+		gimbalActive = False
+		gimbalLimiter = 100 // float
+		gimbalLock = False
 	}
 
 	MODULE
@@ -221,34 +233,56 @@ PART
 		isTweakable = false
 		hideFlow = true
 	}
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = VTOL
-		startEventGUIName = Thrust Left
-		endEventGUIName = Thrust Back
+		startEventGUIName = #LTD-MAG-VTOL-strt // Thrust LEFT
+		endEventGUIName = #LTD-MAG-VTOL-stop // Thrust Back
+		actionGUIName = #LTD-MAG-VTOL-actn // Toggle Left Thrust
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 	}
+
 	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = VTOR
-		startEventGUIName = Thrust Right
-		endEventGUIName = Thrust Back
+		startEventGUIName = #LTD-MAG-VTOR-strt // Thrust Right
+		endEventGUIName = #LTD-MAG-VTOR-stop // Thrust Back
+		actionGUIName = #LTD-MAG-VTOR-actn // Toggle Left Thrust
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 	}
+
 	MODULE
 	{
-	name = ModuleResourceIntake
-	resourceName = IntakeAir
-	checkForOxygen = False
-	area = 0.4
-	intakeSpeed = 20
-	intakeTransformName = Intake  
+		name = ModuleResourceIntake
+		resourceName = IntakeAir
+		checkForOxygen = False
+		area = 0.4
+		intakeSpeed = 20
+		intakeTransformName = Intake  
 	}
 
 	RESOURCE
 	{
-	name = IntakeAir
-	amount = 4.0
-	maxAmount = 8.0
+		name = IntakeAir
+		amount = 4.0
+		maxAmount = 8.0
 	}
+
 }
