--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
@@ -14,47 +14,56 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-solar-panel }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = srf
 
-	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0
+	attachRules = 0,1,0,1,1
+	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1, 1
 
 	TechRequired = specializedElectrics
 	entryCost = 19000
 	cost = 1200
-	category = Utility
+	category = Electrical
 	subcategory = 0
+
 	title = Falcon Solar Array
 	manufacturer = #LTD-Agency-titl
 	description = Recessed, covered solar panel array designed to attach to 2.5-meter Falcon rocket section to provide power for orbital and exploratory purposes.
-
-	attachRules = 0,1,0,1,1
-
+	tags = #autoLOC_500381 // charge deploy e/c elect energ extend fold generat (light panel photo power retract sun track unfold volt watt
 
 	mass = 0.3
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
+
 	crashTolerance = 8
-	maxTemp = 3200
+
+	maxTemp = 1200
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95
+	heatConductivity = 0.04 // 1/3 the default
 
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
-		
 		animationName = Take 001
-
-		raycastTransformName = suncatcher
-
+		// raycastTransformName = suncatcher
+		secondaryTransformName = suncatcher
 		resourceName = ElectricCharge
-
 		chargeRate = 24
-
-		powerCurve
-		{
-			key = 206000000000 0 0 0
-			key = 13599840256 1 0 0
-			key = 68773560320 0.5 0 0
-			key = 0 10 0 0
-		}
+		impactResistance = 2
+		impactResistanceRetracted = 6
+		extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
+		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
+		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>
+		// powerCurve
+		// {
+		// 	key = 206000000000 0 0 0
+		// 	key = 13599840256 1 0 0
+		// 	key = 68773560320 0.5 0 0
+		// 	key = 0 10 0 0
+		// }
 	}
+
 }
