--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-200.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-200.cfg
@@ -15,33 +15,39 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-tank-dragon-mono-200 }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = srf
 
+	attachRules = 0,1,0,1,0
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
 
 	TechRequired = veryHeavyRocketry
 	entryCost = 4000
 	cost = 120
-	category = 0
+	category = FuelTank
 	subcategory = 0
+
 	title = 200 Monopropellant Tank
 	manufacturer = #LTD-Agency-titl
 	description = Attachable monopropellant tank for extended use of Dragon spacecraft.
+	tags = #autoLOC_500612 // fuel fueltank mono propellant rcs
 
-	attachRules = 0,1,0,1,0
+	mass = 0.025
+	fuelCrossFeed = True
 
-	mass = .025
 	dragModelType = default
 	maximum_drag = 0.2
-	minimum_drag = 0.3
+	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 12
-	maxTemp = 2900
-	fuelCrossFeed = true
+
+	maxTemp = 2000
 
 	RESOURCE
 	{
-	name = MonoPropellant
-	amount = 200
-	maxAmount = 200
+		name = MonoPropellant
+		amount = 200
+		maxAmount = 200
 	}
+
 }
