--- a/GameData/LazTek/ExplorationExpansion/Compatibility/RealismOverhaul.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Compatibility/RealismOverhaul.cfg
@@ -1,24 +1,20 @@
-@PART[LazTekAdvancedVTOL]:FOR[RealismOverhaul]
-{
-	%RSSROConfig = False
-}
-@PART[LazTekDragonAftDock]:FOR[RealismOverhaul]
+// RealismOverhaul.cfg v0.9.99.0
+// Exploration Expansion (LEE)
+// created: 24 Jan 2015
+// updated: 11 Mar 2023
+
+// this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
+
+@PART[lee-eng-vtol]:NEEDS[ExplorationExpansion]:NEEDS[ExplorationExpansion]
+{ %RSSROConfig = False }
+
+@PART[lee-dock-aft]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekDragonAftDock/model
-		scale = 1.273885, 1.273885, 1.273885
-	}
+	@MODEL { scale = 1.273885, 1.273885, 1.273885 }
 	@scale = 1.273885
 	@rescaleFactor = 1.0
-	@node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-	@title = DragonV2 Aft Docking Port
-	%manufacturer = SpaceX Prototype
-	@description = Aft docking port for SpaceX Dragon V2 spacecraft, also connects to medium-sized docking ports. Built-in top decouplers to allow discarding before atmospheric reentry.
-	@attachRules = 0,1,0,0,0
-	@mass = 0.075
+
 	@MODULE[ModuleDockingNode]
 	{
 		@nodeType = NASADock
@@ -34,46 +30,23 @@
 		%minDistanceToReEngage = 0.25 // 1.0
 		%undockEjectionForce = 0.1 // 10
 	}
-	@MODULE[ModuleDecouple]
-	{
-		@ejectionForce = 10
-	}
+	@MODULE[ModuleDecouple] { @ejectionForce = 10 }
 }
-@PART[LazTekDragonHabitat]:FOR[RealismOverhaul]
+
+@PART[lee-dragon-habitat]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekDragonHabitat/model
-		scale = 1.242, 1.242, 1.242
-	}
+	@MODEL { @scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
-	@node_stack_top = 0.0, 1.12, 0.0, 0.0, -1.0, 0.0, 3
-	@node_stack_attach = 0.0, -1.0, 0.0, 0.0, 1.0, 0.0, 2
-	@node_stack_bottom = 0.0, -2.1, 0.0, 0.0, -1.0, 0.0, 3
-	@title = Dragon Expandable Habitat Trunk
-	%manufacturer = SpaceX Prototype
-	@description = Habitat trunk with decoupler for Dragon 2 spacecraft on interplanetary missions. Designed to have twin solar panels with retractable covers attached and upper landing gear. Has batteries and extra fuel.
-	@attachRules = 1,0,1,1,1
+
 	@mass = 4.2
 	@stagingIcon = DECOUPLER_VERT
-	@MODULE[ModuleCommand]
-	{
-		@minimumCrew = 0
-	}
-	@MODULE[ModuleDecouple]
-	{
-		@ejectionForce = 25
-		@explosiveNodeID = top
-	}
-	!RESOURCE[ElectricCharge]
-	{
-	}
-	!RESOURCE[MonoPropellant]
-	{
-	}
+	@MODULE[ModuleDecouple] { @ejectionForce = 25 }
+
+	!RESOURCE[ElectricCharge] {}
+	!RESOURCE[MonoPropellant] {}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -130,54 +103,34 @@
 		}
 	}
 }
-@PART[LazTekSolarPanelCoverRetractable]:FOR[RealismOverhaul]
+
+@PART[lee-solar-cover-retractable]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekDragonRetractablePanelCover/model
-		scale = 1.242, 1.242, 1.242
-	}
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
-	@node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1
-	@title = Dragon Retractable Solar Panel Fairing
-	%manufacturer = SpaceX Prototype
-	@description = Retractable fairing for Dragon solar panels. Designed to be stacked on attachment points in pairs for use on interplanetary missions.
-	@attachRules = 0,1,0,1,1
 	@mass = 0.075
 }
-@PART[LazTekExplorerHeatShieldV2]:FOR[RealismOverhaul]
+
+@PART[lee-heatshield-explorer-2]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekExplorerHeatShieldV2/model
-		scale = 1.242, 1.242, 1.242
-	}
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
+
 	@node_stack_top = 0.0, 0.17, 0.0, 0.0, 1.0, 0.0, 3
 	@node_stack_bottom = 0.0, -0.18, 0.0, 0.0, -1.0, 0.0, 3
-	@category = Structural
-	@title = Dragon V2 Habitat Heat Shield
-	%manufacturer = SpaceX Prototype
-	@description = PICA-X protective heat shield with bottom decoupler for atmospheric entry of SpaceX Dragon V2 Habitat module.
-	@mass = 0.15
+
 	@stagingIcon = DECOUPLER_VERT
-	@MODULE[ModuleDecouple]
-	{
-		@ejectionForce = 10
-		@explosiveNodeID = top
-	}
+	@MODULE[ModuleDecouple] { @ejectionForce = 10 }
 	// Thermo
 	@maxTemp = 2400
 	!MODULE[ModuleAblator] {}
-	!MODULE[ModuleHeatShield] {}
 	!MODULE[ModuleAeroReentry] {}
-	!RESOURCE[AblativeShielding] {}
 	!RESOURCE[Ablator] {}
 	%emissiveConstant = 0.6 // not too absorptive for reentry
 	%thermalMassModifier = 1.0
@@ -207,88 +160,65 @@
 		maxAmount = 850
 	}
 }
-@PART[LazTekFalconShortInterstage]:FOR[RealismOverhaul]
+
+@PART[lee-falcon-stage-short]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekFalconShortInterstage/model
-		scale = 1.242, 1.242, 1.242
-	}
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
-	@node_stack_top = 0.0, 1.695, 0.0, 0.0, 1.0, 0.0, 3
-	@node_stack_bottom = 0.0, -1.691, 0.0, 0.0, -1.0, 0.0, 3
-	@title = Falcon Short Interstage
-	%manufacturer = SpaceX Prototype
-	@description = Simple utility decoupler fairing for SpaceX Falcon.
-	@mass = 0.9
+
 	@stagingIcon = DECOUPLER_VERT
-	@MODULE[ModuleDecouple]
-	{
-		@ejectionForce = 2.5
-		@explosiveNodeID = top
-	}
+	@MODULE[ModuleDecouple] { @ejectionForce = 2.5 }
 }
-@PART[LazTekFalconSolarPanels]:FOR[RealismOverhaul]
+
+@PART[lee-solar-panel]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekFalconSolarPanels/model
-		scale = 1.242, 1.242, 1.242
-	}
+	
+	@MODEL { scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
+
 	@node_attach = 0.005, 0.0, 0.0, 1.0, 0.0, 0.0
 	@category = Utility
-	@title = Falcon Recessed Solar Array
-	%manufacturer = SpaceX Prototype
-	@description = Recessed, covered solar panel array designed to attach to a Falcon rocket section to provide power for orbital and exploratory purposes.
 	@mass = 0.01575
-	@MODULE[ModuleDeployableSolarPanel]
-	{
-		@chargeRate = 1.071
-	}
+	@MODULE[ModuleDeployableSolarPanel] { @chargeRate = 1.071 }
 }
-@PART[LazTekFalconTanker]:FOR[RealismOverhaul]
+
+@PART[lee-falcon-tanker]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
+
+	!MODEL {}
 	MODEL
 	{
-		model = LazTek/Parts/LazTekFalconRemoteControl/model
+		model = LazTek/ExplorationExpansion/Assets/lee-falcon-tanker
+		scale = 1.242, 1.242, 1.242
+	}
+
+	MODEL:NEEDS[LazTek/LaunchPack]
+	{
+		model = LazTek/LaunchPack/Assets/llp-probe-falcon 
 		scale = 1.242, 1.242, 1.242
 		position = 0.0, 9.97326, 0.0
 	}
-	MODEL
-	{
-		model = LazTek/Parts/LazTekFalconTanker/model
-		scale = 1.242, 1.242, 1.242
-	}
 	@scale = 1.242
 	@rescaleFactor = 1.0
+
 	@node_stack_top = 0.0, 8.1, 0.0, 0.0, 1.0, 0.0, 3
 	@node_stack_bottom = 0.0, -7.5, 0.0, 0.0, -1.0, 0.0, 3
 	@node_stack_connect1 = 0.0, -8.5, 0.0, 0.0, -1.0, 0.0, 3
+
 	@category = Propulsion
-	@title = Falcon Tanker Stage Tank
-	%manufacturer = SpaceX Prototype
 	@description = An upper stage fuel tank for SpaceX Falcon Heavy Tanker launch configuration.
-	!RESOURCE[LiquidFuel]
-	{
-	}
-	!RESOURCE[Oxidizer]
-	{
-	}
-	!RESOURCE[MonoPropellant]
-	{
-	}
-	!MODULE[ModuleSAS]
-	{
-	}
+
+	!RESOURCE[LiquidFuel] {}
+	!RESOURCE[Oxidizer] {}
+	!RESOURCE[MonoPropellant] {}
+	!MODULE[ModuleSAS] {}
+
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -296,41 +226,29 @@
 		type = Structural
 	}
 }
-@PART[DragonHabitatLandingLeg]:FOR[RealismOverhaul]
+
+@PART[lee-leg-landing]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekHabitatLandingLeg/model
-		scale = 1.242, 1.242, 1.242
-	}
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
-	@node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
-	@title = Exploration Dragon Habitat Landing Leg
-	%manufacturer = SpaceX Prototype
-	@description = Landing leg for Dragon Habitat, designed to be attached in a set of four.
+
 	@mass = 0.125
-	@CoMOffset = 0, 0, 0.1
 }
-@PART[LazTekDragonMonopropellantTank]:FOR[RealismOverhaul]
+
+@PART[lee-tank-dragon-mono-200]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekMonoPropellantTank200/model
-		scale = 1.242, 1.242, 1.242
-	}
-	@node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
+
 	@category = Propulsion
-	@title = SpaceX Fuel Tank
-	%manufacturer = SpaceX Prototype
+	@title = LazTek Fuel Tank
 	@description = Nice surface mountable fuel tank for all your fuel tank needs.
-	!RESOURCE[MonoPropellant]
-	{
-	}
+
+	!RESOURCE[MonoPropellant] {}
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -338,23 +256,18 @@
 		type = ServiceModule
 	}
 }
-@PART[LazTekDragonMonoTank400]:FOR[RealismOverhaul]
+
+@PART[lee-tank-dragon-mono-400]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekMonoPropellantTank400/model
-		scale = 1.242, 1.242, 1.242
-	}
-	@node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
+
 	@category = Propulsion
-	@title = SpaceX Fuel Tank
-	%manufacturer = SpaceX Prototype
+	@title = LazTek Fuel Tank
 	@description = Nice surface mountable fuel tank for all your fuel tank needs.
-	!RESOURCE[MonoPropellant]
-	{
-	}
+
+	!RESOURCE[MonoPropellant] {}
 	MODULE
 	{
 		name = ModuleFuelTanks
@@ -362,25 +275,20 @@
 		type = ServiceModule
 	}
 }
-@PART[LazTekNERVAIIVacuumEngine]:FOR[RealismOverhaul]
+
+@PART[lee-eng-nerva-2]:FOR[RealismOverhaul]:NEEDS[ExplorationExpansion]
 {
 	%RSSROConfig = True
-	!mesh = DELETE
-	MODEL
-	{
-		model = LazTek/Parts/LazTekNERVAIIVacuumEngine/model
-		scale = 1.242, 1.242, 1.242
-	}
+
+	@MODEL { scale = 1.242, 1.242, 1.242 }
 	@scale = 1.242
 	@rescaleFactor = 1.0
-	@node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 2
-	@node_stack_bottom = 0.0, -4.0, 0, 0.0, -1.0, 0.0, 2
-	@title = NERVA 2 NRX Nuclear Engine
-	@manufacturer = SpaceX Prototype
+
 	@description = Continuing the work of Aerojet on the Nuclear NERVA, SpaceX plans to replicate the functionality of the NERVA engine for deep space exploration.
 	@mass = 8.5
 	@maxTemp = 1973.15
-	@MODULE[ModuleEngines*]
+
+	@MODULE[ModuleEnginesFX]
 	{
 		@minThrust = 111
 		@maxThrust = 333
@@ -390,10 +298,10 @@
 			@name = LqdHydrogen
 			@ratio = 1.0
 		}
-		@PROPELLANT[Oxidizer]
+		PROPELLANT
 		{
-			@name = EnrichedUranium
-			@ratio = 0.00000000001
+			name = EnrichedUranium
+			ratio = 0.00000000001
 		}
 		@atmosphereCurve
 		{
@@ -401,15 +309,10 @@
 			@key,1 = 1 380
 		}
 	}
-	@MODULE[ModuleGimbal]
-	{
-		@gimbalRange = 2.5
-		%useGimbalResponseSpeed = true
-		%gimbalResponseSpeed = 16
-	}
-	!MODULE[ModuleAlternator]
-	{
-	}
+
+	@MODULE[ModuleGimbal] { %gimbalResponseSpeed = 16 }
+
+	!MODULE[ModuleAlternator] {}
 	MODULE
 	{
 		name = ModuleGenerator
@@ -430,9 +333,8 @@
 			rate = 1e-13
 		}
 	}
-	!RESOURCE[ElectricCharge]
-	{
-	}
+	!RESOURCE[ElectricCharge] {}
+
 	RESOURCE
 	{
 		name = EnrichedUranium
