--- a/GameData/LazTek/ExplorationExpansion/Config/ExplorationExpansion.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Config/ExplorationExpansion.cfg
@@ -14,10 +14,10 @@
 	}
 
 	// special cases
-	@PART[lee-]:NEEDS[LazTek/ExplorationExpansion]:FOR[ExplorationExpansion]
+	@PART[lee-falcon-tanker]:NEEDS[LazTek/ExplorationExpansion]:FOR[ExplorationExpansion]
 	{
-		tmp01 = #autoLOC_500816
-		// break decouple separat split stag
+		// fueltank ?lfo liquid oxidizer propellant rocket
+		tmp01 = #autoLOC_500546
 		@tags = #$tags$ $tmp01$
 		!tmp01 = DELETE
 	}
