--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
@@ -8,6 +8,7 @@ PART
 {
 	name = lee-dock-aft
 	oldName = LazTekDragonAftDock
+
 	module = Part
 	author = Lazarus Luan and zer0kerbal
 
@@ -28,9 +29,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = SpaceX Dragon Aft Docking Port
+	title = LaxTek Dragon2 Aft Docking Port
 	manufacturer = #LTD-Agency-titl
-	description = Aft docking port for SpaceX Dragon V2 spacecraft, also connects to medium-sized docking ports. Built-in top decouplers to allow discarding before atmospheric reentry.
+	description = Aft docking port for LazTek Dragon V2 spacecraft, also connects to medium-sized docking ports. Built-in top decouplers to allow discarding before atmospheric reentry.
 	tags = #autoLOC_500848 // berth capture connect couple dock fasten join moor socket
 
 	mass = 0.075
