--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dragon-habitat.cfg
@@ -4,7 +4,6 @@
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-
 PART
 {
 	name = lee-dragon-habitat
@@ -23,22 +22,22 @@ PART
 	INTERNAL { name = DragonHabitat }
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0, 1.12, 0, 0, -1, 0, 1
-	node_stack_bottom = 0, -2.1, 0, 0, 1, 0, 1
-	node_stack_attach = 0, -1.0, 0, 0, 1, 0, 1
+	node_stack_top = 0.0, 1.12, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_bottom = 0.0, -2.1, 0.0, 0.0, -1.0, 0.0, 3
+	node_stack_attach = 0.0, -1.0, 0.0, 0.0, 1.0, 0.0, 2
 
+	sound_decoupler_fire = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	
 	TechRequired = advScienceTech
 	entryCost = 36000
 	cost = 12000
 	category = Utility
 	subcategory = 0
 
-	sound_decoupler_fire = decouple
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-
-	title = Dragon Habitat
+	title = Dragon Expandable Habitat Trunk
 	manufacturer = #LTD-Agency-titl
-	description = 2.5-meter habitat trunk with decoupler for Dragon 2 spacecraft on interplanetary missions. Designed to have twin solar panels with retractable covers attached and upper landing gear. Has batteries and extra monopropellent fuel.
+	description = 2.5m habitat trunk with decoupler for Dragon 2 spacecraft on interplanetary missions. Designed to have twin solar panels with retractable covers attached and upper landing gear. Has batteries and extra monopropellent fuel.
 	tags = #autoLOC_500297 //#autoLOC_500297 = base cabin (can outpost passenger statio tour tuna
 
 	mass = 0.9 // inflatable
