--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-eng-nerva-2.cfg
@@ -18,8 +18,8 @@ PART
 	bulkheadProfiles = size2, srf
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -4.0, 0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_bottom = 0.0, -4.0, 0, 0.0, -1.0, 0.0, 2
 
 	fx_exhaustFlame_blue = 0.0, -1.6, 0.0, 0.0, 1.0, 0.0, running
 	fx_exhaustLight_blue = 0.0, -1.6, 0.0, 0.0, 0.0, 1.0, running
@@ -36,12 +36,12 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = NASA NERVA II Nuclear Vacuum Engine
+	title = NERVA 2 NRX Nuclear Engine
 	manufacturer = #LTD-Agency-titl
-	description = NASA NERVA II Nuclear vacuum engine, mount and protective cowling designed to be attached to 2.5m upper tank of long-range space vehicles.
+	description = NERVA II Nuclear vacuum engine, mount and protective cowling designed to be attached to 2.5m upper tank of long-range space vehicles.
 	tags = #autoLOC_500438 // active atom efficient engine inter liquid (nerv nuclear nuke orbit propuls radio reactor vacuum
 
-	mass = 3.75 // was 2.0 // LV-N is 3
+	mass = 4.75 // was 2.0 // LV-N is 3
 
 	dragModelType = default
 	maximum_drag = 0.2
@@ -81,7 +81,7 @@ PART
 		// }
 		atmosphereCurve
 		{
-		key = 0 900
+		key = 0 25
 		key = 1 380 // 185
 		key = 2 0.001
 		}
@@ -91,7 +91,7 @@ PART
 	{
 		name = ModuleGimbal
 		gimbalTransformName = thrustTransform
-		gimbalRange = 1
+		gimbalRange = 2.5
 		gimbalResponseSpeed = 40
 		useGimbalResponseSpeed = True
 		enablePitch = True
