--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-stage-short.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-falcon-stage-short.cfg
@@ -4,7 +4,6 @@
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-
 PART
 {
 	name = lee-falcon-stage-short
@@ -16,42 +15,65 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-falcon-stage-short }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = size2
 
-	node_stack_top = 0.0, 1.695, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -1.691, 0.0, 0.0, 1.0, 0.0
+	attachRules = 1,0,1,1,1
+	node_stack_top = 0.0, 1.695, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_bottom = 0.0, -1.691, 0.0, 0.0, -1.0, 0.0, 3
+
+	sound_vent_large = deploy
+	fx_gasBurst_white = 0.0, 0.3, 0.0, 0.0, 1.0, 0.0, deploy
 
 	TechRequired = veryHeavyRocketry
 	entryCost = 6000
 	cost = 800
-	category = Structural
+	// category = Structural
+	category = Coupling
 	subcategory = 0
+
 	title = Falcon Short Interstage
 	manufacturer = #LTD-Agency-titl
-	description = Simple 2.5m utility decoupler fairing for SpaceX Falcon.
+	description = Simple 2.5m utility decoupler fairing for LazTek Falcon.
+	tags = #autoLOC_500816 // break decouple separat split stag
+	// tags = #autoLOC_500174 // aero )cap cargo cone contain drag fairing hollow inter nose payload protect rocket shroud stage (stor transport
 
-	attachRules = 1,0,1,1,1
+	mass = 0.9
+	skinMassPerArea = 4.0
+	emissiveConstant = 0.8
+	thermalMassModifier = 2.0
+	skinInternalConductionMult = 0.25
+	// heatConductivity = 0.06 // half default
+	fuelCrossFeed = False
 
-	fx_gasBurst_white = 0.0, 0.217, 0.0, 0.0, 1.0, 0.0, activate
-	sound_vent_large = activate
-
-	mass = .9
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.1
 	angularDrag = 2
+
 	crashTolerance = 10
-	maxTemp = 3400
-	fuelCrossFeed = False
+
+	maxTemp = 2600
 
 	stageOffset = 1
 	childStageOffset = 1
-
-	stagingIcon = DECOUPLER_HOR
+	inverseStageCarryover = false
+	stagingIcon = DECOUPLER_HOR // FUEL_TANK MYSTERY_PART RCS_TANK STRUT
 
 	MODULE
 	{
 		name = ModuleDecouple
 		ejectionForce = 200
-		explosiveNodeID = top 
+		ejectionForcePercent = 100
+		isOmniDecoupler = False
+		explosiveNodeID = top
+		fxGroupName = deploy
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
 	}
+
 }
