--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-leg-landing.cfg
@@ -4,7 +4,6 @@
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-
 PART
 {
 	name = lee-leg-landing
@@ -15,45 +14,75 @@ PART
 
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-leg-landing }
 	scale = 1.0
-	rescaleFactor = .7
+	rescaleFactor = 0.7
+	bulkheadProfiles = srf
 
+	attachRules = 0,1,0,0,1
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0
-
+	stackSymmetry = 3
+	
 	TechRequired = fieldScience
 	entryCost = 13600
 	cost = 500
-	category = Utility
+	category = Ground
 	subcategory = 0
-	title = Dragon Habitat Landing Leg
+
+	title = Exploration Dragon Habitat Landing Leg
 	manufacturer = #LTD-Agency-titl
 	description = Landing leg for Dragon Habitat, designed to be attached in a set of four.
-
-	attachRules = 0,1,0,0,1
+	tags = #autoLOC_500881 // ground land leg support
 
 	mass = 0.05
+	CoMOffset = 0, 0, 0.1
+	explosionPotential = 0
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 12
-	maxTemp = 2900
 
-	CoMOffset = 0, 0, 0.1
+	crashTolerance = 16
+
+	maxTemp = 1200
+	// heatConductivity = 0.06 // half default
+	emissiveConstant = 0.8 // a bit better than usual, because conduction needs some work
 
 	MODULE
 	{
-		
-		name = ModuleLandingLeg
-
-		animationName = DragonHabitatLeg
-		wheelColliderName = wheelCollider
-		suspensionTransformName = Piston
-		orientFootToGround = true
-		landingFootName = Foot
-		alignFootUp = true
-		suspensionUpperLimit = 0.75
-		impactTolerance = 450
-		suspensionSpring = 5
-		suspensionDamper = 2
+		name = ModuleAnimateGeneric
+		animationName = DragonHabitatLeg 
+			// animSpeed = 1.0
+			// animSwitch = true
+			// animTime = 0
+		allowAnimationWhileShielded = False
+		startEventGUIName = #LTD-MAG-leg-strt
+		endEventGUIName = #LTD-MAG-leg-stop
+		actionGUIName = #LTD-MAG-leg-actn
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
+		defaultActionGroup = Gear
 	}
+
 }
+	// MODULE
+	// {
+		
+	// 	name = ModuleLandingLeg
+
+	// 	animationName = DragonHabitatLeg
+	// 	wheelColliderName = wheelCollider
+	// 	suspensionTransformName = Piston
+	// 	orientFootToGround = true
+	// 	landingFootName = Foot
+	// 	alignFootUp = true
+	// 	suspensionUpperLimit = 0.75
+	// 	impactTolerance = 450
+	// 	suspensionSpring = 5
+	// 	suspensionDamper = 2
+	// }
