--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-heatshield-explorer-2.cfg
@@ -15,62 +15,331 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-heatshield-explorer-2 }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = size2
 
+	attachRules = 1,0,1,1,0
 	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0
 	node_stack_bottom = 0.0, -0.08, 0.0, 0.0, -1.0, 0.0
+
+	sound_decoupler_fire = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 
 	TechRequired = heavyAerodynamics
 	entryCost = 4000
 	cost = 400
-	category = Aero
+	category = Thermal
 	subcategory = 0
-	title = Explorer Heat Shield V2
-	manufacturer = #LTD-Agency-titl
-	description = 2.5m PICA-X protective heat shield with bottom decoupler for atmospheric entry of SpaceX Explorer V2 Habitat module.
 
-	attachRules = 1,0,1,1,0
+	title = Dragon V2 Habitat Heat Shield
+	manufacturer = #LTD-Agency-titl
+	description = 2.5m PICA-X protective heat shield with bottom decoupler for atmospheric entry of LazTek Explorer V2 Habitat module.
+	tags = #autoLOC_500186 // ablat drag entry insulate protect re- rocket therm
 
 	mass = 0.15
+	fuelCrossFeed = False
+	PhysicsSignificance = 0
+
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
+
 	crashTolerance = 12
-	maxTemp = 12000
-	fuelCrossFeed = False
-	stagingIcon = DECOUPLER_HOR
+	breakingForce = 200
+	breakingTorque = 200
+
+	maxTemp = 3300
+	thermalMassModifier = 1.0
 
 	stageOffset = 1
 	childStageOffset = 1
+	stagingIcon = DECOUPLER_HOR
+
+	MODULE
+	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = False
+		deflectionLiftCoeff = 1.5
+		liftingSurfaceCurve = CapsuleBottom
+		disableBodyLift = False
+		omnidirectional = False
+		perpendicularOnly = True
+		transformDir = Y
+		transformSign = -1
+		nodeEnabled = True
+		attachNodeName = bottom
+	}
 
 	MODULE
 	{
 		name = ModuleDecouple
 		ejectionForce = 100
+		ejectionForcePercent = 100
+		isOmniDecoupler = False
 		explosiveNodeID = top
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = False
+		menuName = #autoLOC_502004 //#autoLOC_502004 = Jettison Heat Shield
+		stagingEnableText = #autoLOC_502005 //#autoLOC_502005 = HS Jettison Not Staged
+		stagingDisableText = #autoLOC_502006 //#autoLOC_502006 = HS Jettison Staged
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
 	}
+	
 	MODULE
 	{
-		name = ModuleHeatShield
-		direction = 0, -1, 0
-		reflective = 0.05	
-		ablative = AblativeShielding
+		name = ModuleAblator
+		ablativeResource = Ablator
+		lossExp = -7500
+		lossConst = 0.1
+		pyrolysisLossFactor = 6000
+		reentryConductivity = 0.01
+		ablationTempThresh = 500
+		
+		useChar = True
+		charModuleName = shieldChar
+	}
+
+	MODULE
+	{
+		name = ModuleColorChanger
+		moduleID = shieldChar
+		shaderProperty = _BurnColor
+		useRate = False
+		toggleInEditor = False
+		toggleInFlight = False
+		
+		redCurve
 		{
-			key = 650 0 0 0
-			key = 1000 64 0 0
-			key = 3000 80 0 0
+			key = 0 0
+			key = 1 1
 		}
-		dissipation
+		greenCurve
 		{
-				key = 300 0 0 0
-				key = 500 180 0 0
+			key = 0 0
+			key = 1 1
+		}
+		blueCurve
+		{
+			key = 0 0
+			key = 1 1
+		}
+		alphaCurve
+		{
+			key = 0 0.8
 		}
 	}
 
 	RESOURCE
 	{
-		name = AblativeShielding
+		name = Ablator
 		amount = 1250
 		maxAmount = 1250
 	}
+
+	MODULE
+	{
+		name = ModuleTestSubject
+		useStaging = False
+		useEvent = True
+		situationMask = 15
+		CONSTRAINT
+		{
+			type = ATMOSPHERE
+			value = True
+		}
+		CONSTRAINT
+		{
+			// prelaunch only at home
+			// our main situationMask above includes prelaunch
+			// but if nothome, here, and that mask with this value (11)
+			// which excludes prelaunch
+			type = SITUATION
+			value = 11
+			body = _NotHome
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = LT
+			value = 350
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = GT
+			value = 250
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = LT
+			value = 500
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = GT
+			value = 300
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = LT
+			value = 600
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEEDENV
+			test = GT
+			value = 400
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 1500
+			situationMask = 8
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = GT
+			value = 1000
+			situationMask = 8
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 2500
+			situationMask = 8
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = GT
+			value = 1500
+			situationMask = 8
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = LT
+			value = 6000
+			situationMask = 8
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = SPEED
+			test = GT
+			value = 2000
+			situationMask = 8
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = DENSITY
+			test = LT
+			value = 0.1
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 4000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 6000
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 8000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 12000
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = GT
+			value = 12000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = ALTITUDEENV
+			test = LT
+			value = 16000
+			prestige = Exceptional
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ALWAYS
+			prestige = Trivial
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = BODYANDSITUATION
+			prestige = Significant
+		}
+		CONSTRAINT
+		{
+			type = REPEATABILITY
+			value = ONCEPERPART
+			prestige = Exceptional
+		}
+	}
+
 }
+
+	// MODULE
+	// {
+	// 	name = ModuleHeatShield
+	// 	direction = 0, -1, 0
+	// 	reflective = 0.05	
+	// 	ablative = AblativeShielding
+	// 	{
+	// 		key = 650 0 0 0
+	// 		key = 1000 64 0 0
+	// 		key = 3000 80 0 0
+	// 	}
+	// 	dissipation
+	// 	{
+	// 			key = 300 0 0 0
+	// 			key = 500 180 0 0
+	// 	}
+	// }
+
+	// RESOURCE
+	// {
+	// 	name = AblativeShielding
+	// 	amount = 1250
+	// 	maxAmount = 1250
+	// }
