--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-cover-retractable.cfg
@@ -4,7 +4,6 @@
 // updated: 11 Mar 2023
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
-
 PART
 {
 	name = lee-solar-cover-retractable
@@ -16,7 +15,9 @@ PART
 	MODEL { model = LazTek/ExplorationExpansion/Assets/lee-solar-cover-retractable }
 	scale = 1.0
 	rescaleFactor = 0.85
+	bulkheadProfiles = srf
 
+	attachRules = 0,1,0,1,1
 	node_attach = 0.0, 0.0, -0.18, 0.0, 0.0, -1.0, 1
 
 	TechRequired = heavyAerodynamics
@@ -24,27 +25,42 @@ PART
 	Cost = 2100
 	category = Aero
 	subcategory = 0
+
 	title = Dragon Retractable Solar Panel Fairing
 	manufacturer = #LTD-Agency-titl
 	description = Retractable fairing for Dragon solar panels. Designed to be stacked on attachment points in pairs for use on interplanetary missions.
-
-	attachRules = 0,1,0,1,1
+	tags = #autoLOC_500765 // body build construct cover extend fabricate plat structur support
 
 	mass = 0.05
+	fuelCrossFeed = False
+	explosionPotential = 0.0
+
 	dragModelType = default
-	maximum_drag = 0.1
+	maximum_drag = 0.2
 	minimum_drag = 0.1
 	angularDrag = 1
+
 	crashTolerance = 10
-	explosionPotential = 0.0
-	maxTemp = 3400
-	fuelCrossFeed = False
+	breakingForce = 200
+	breakingTorque = 200
+
+	maxTemp = 2000
 
 	MODULE
 	{
 		name = ModuleAnimateGeneric
 		animationName = PanelOpen
-		startEventGUIName = Open Solar Panel Covers
-		endEventGUIName = Close Solar Panel Covers
+		startEventGUIName = #LTD-MAG-cover-strt // Open Covers
+		endEventGUIName = #LTD-MAG-cover-stop // Close Covers
+		actionGUIName = #LTD-MAG-cover-actn // Toggle Covers
+		eventAvailableEditor = True
+		eventAvailableFlight = True
+		eventAvailableEVA = True
+		evaDistance = 10
+		allowDeployLimit = True
+		revClampDirection = False
+		revClampSpeed = True
+		revClampPercent = True
 	}
+
 }
