--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-solar-panel.cfg
@@ -5,9 +5,10 @@
 
 // this file: CC BY-ND 4.0 by Lazarus Luan and zer0Kerbal
 PART
-	{
+{
 	name = lee-solar-panel
 	oldName = LazTekFalconSolarPanels
+
 	module = Part
 	author = Lazarus Luan and zer0kerbal
 
@@ -18,6 +19,8 @@ PART
 
 	attachRules = 0,1,0,1,1
 	node_attach = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1, 1
+	
+	// node_attach = 0.005, 0.0, 0.0, 1.0, 0.0, 0.0
 
 	TechRequired = specializedElectrics
 	entryCost = 19000
@@ -25,9 +28,9 @@ PART
 	category = Electrical
 	subcategory = 0
 
-	title = Falcon Solar Array
+	title = Falcon Recessed Solar Array
 	manufacturer = #LTD-Agency-titl
-	description = Recessed, covered solar panel array designed to attach to 2.5-meter Falcon rocket section to provide power for orbital and exploratory purposes.
+	description = Recessed, covered solar panel array designed to attach to 2.5m Falcon rocket section to provide power for orbital and exploratory purposes.
 	tags = #autoLOC_500381 // charge deploy e/c elect energ extend fold generat (light panel photo power retract sun track unfold volt watt
 
 	mass = 0.3
