--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-200.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-tank-dragon-mono-200.cfg
@@ -26,7 +26,7 @@ PART
 	category = FuelTank
 	subcategory = 0
 
-	title = 200 Monopropellant Tank
+	title = LazTek 200 Monopropellant Tank
 	manufacturer = #LTD-Agency-titl
 	description = Attachable monopropellant tank for extended use of Dragon spacecraft.
 	tags = #autoLOC_500612 // fuel fueltank mono propellant rcs
