--- a/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
+++ b/GameData/LazTek/ExplorationExpansion/Parts/lee-dock-aft.cfg
@@ -29,9 +29,9 @@ PART
 	category = Coupling
 	subcategory = 0
 
-	title = LaxTek Dragon2 Aft Docking Port
+	title = #LEE-dock-aft-titl
 	manufacturer = #LTD-Agency-titl
-	description = Aft docking port for LazTek Dragon V2 spacecraft, also connects to medium-sized docking ports. Built-in top decouplers to allow discarding before atmospheric reentry.
+	description = #LEE-dock-aft-desc
 	tags = #autoLOC_500848 // berth capture connect couple dock fasten join moor socket
 
 	mass = 0.075
